Исправление недочетов: класс для проверки доступа к питомцу был преобразован в метод, небольшие изменения